# ollama-reranker-test

./: .env.example  .gitignore  LICENSE  MODEL_SETUP.md  README.md  compare_results.py  download_models.sh  pyproject.toml  reranker_comparison_report.md  setup_models.sh  test_modelfile  test_official.py  test_official_bge.py  test_official_qwen.py  test_ollama_bge.py  test_ollama_qwen.py  test_reranker.py  validate_models.sh
.github/workflows/: bge_tests.yml
results/: bge_official_BAAI_bge-reranker-base_results.json  bge_official_BAAI_bge-reranker-large_results.json  bge_official_BAAI_bge-reranker-v2-m3_results.json  bge_official_results.json  bge_ollama_bge-base_results.json  bge_ollama_bge-large_results.json  bge_ollama_bge-v2-m3_results.json  bge_ollama_bgelarge_results.json  bge_ollama_bgetest_results.json  bge_ollama_bgev2m3_results.json  bge_ollama_results.json  comprehensive_comparison.json  qwen_official_Qwen_Qwen3-Reranker-0.6B_results.json  qwen_official_Qwen_Qwen3-Reranker-4B_results.json  qwen_official_Qwen_Qwen3-Reranker-8B_results.json  qwen_ollama_qwen3-0.6b_results.json  qwen_ollama_qwen3-4b_results.json  qwen_ollama_qwen3-8b_results.json  qwen_ollama_qwen34b_results.json  qwen_ollama_qwen38b_results.json  qwen_ollama_qwen3p6b_results.json  qwen_ollama_results.json
templates/: Modelfile.bge-base  Modelfile.bge-large  Modelfile.bge-v2-m3  Modelfile.qwen3-0.6b  Modelfile.qwen3-4b  Modelfile.qwen3-8b
